src/objects/ZV_Cell__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <referenceTo>ZV_Board__c</referenceTo>
        <relationshipLabel>Cells</relationshipLabel>
        <relationshipName>Cells</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GamePlayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Game Player</label>
        <referenceTo>ZV_GamePlayer__c</referenceTo>
        <relationshipLabel>Cells</relationshipLabel>
        <relationshipName>Cells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cell</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZVC-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Cell Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>